@@ -105,11 +105,11 @@ II.PFO.00.LH? = server_fdsn_iris
 IV.PRMA..LH? = server_fdsn_ingv
 G.NOUC..LH* = server_fdsn_ipgp
 #   - SEED ID down to location code level
-GE.APE. = server_arclink_webdc
+GE.APE. = server_fdsn_geofon
 #   - SEED ID down to station code level
 CI.BBR = server_fdsn_iris
 #   - network code
-GE = server_arclink_webdc
+GE = server_fdsn_geofon
 7A = server_fdsn_iris
 TA = server_fdsn_iris
 
@@ -191,18 +191,16 @@ timeout = 30
 user_agent = obspyck
 debug = false
 
-[server_arclink_webdc]
-type = arclink
-host = webdc.eu
-port = 18001
-user = Anonymous
+[server_fdsn_geofon]
+type = fdsn
+# URL short key mappings recognized by obspy work too
+# https://docs.obspy.org/packages/obspy.clients.fdsn.html?highlight=URL
+base_url = GEOFON
+user =
 password =
-institution = ObsPyck example configuration
 timeout = 30
-dcid_key_file =
+user_agent = obspyck
 debug = false
-command_delay = 0.0
-status_delay = 1.0
 
 [server_seedlink_iris]
 type = seedlink
